tests/accept/two.ul
int[5] foo(){}


char bar(){}
