tests/reject/notthree.ul
int foo(int x, ){}

char bar(){}
